push using build script

--- a/index.html
+++ b/index.html
@@ -118,10 +118,17 @@ what I have been doing, or I might want to share it with someone just starting.<
 <br></p>
 <h2 id="libreoffice">Libreoffice</h2>
 <ul>
-<li><a href="/post/variable-units-of-measurement">Different Units of Measurement in Libreoffice</a></li>
+<li><a href="/post/libreoffice-user-hostile-dialog-box">User Hostile Dialog Box - Practice</a></li>
 </ul>
-<!-- - [Lua](./files/lua/readme.md) <--- 😀 -->
-<!-- - [Lua UNO Language Binding in Libreoffice]() -->
+<!-- - [Different Units of Measurement in Libreoffice](/post/libreoffice-different-units) -->
+<!-- - [Lua UNO Language Binding in Libreoffice](/post/libreoffice-lua-uno-languagebinding) -->
+<!-- - [Custom Themes in Libreoffice (GSoC)](/post/libreoffice-custom-themes) -->
+<h2 id="graphics-programming">Graphics Programming</h2>
+<ul>
+<li><a href="/post/computer-graphics-from-scratch">Computer Graphics from Scratch</a></li>
+</ul>
+<!-- - [Lua](./files/lua/readme.md)  -->
+<!-- - [Libreoffice Welcome Screen]()  -->
 <!-- - [Colorscheme in Libreoffice]() -->
 <!-- - [Rust UNO Language Binding in Libreoffice]() -->
 <!-- - [The Notebookbar]() -->
@@ -142,12 +149,9 @@ what I have been doing, or I might want to share it with someone just starting.<
 <!-- - [Writing an interpreter in Go]() -->
 <!-- - [Backend and REST in Golang]() -->
 <!---->
-<!-- ## Graphics Programming -->
-<!---->
-<!-- - [Ray Tracing in One Weekend]() -->
+<!-- - [Ray Tracing in One Weekend](/post/graphics-ray-tracing-one-weekend) -->
 <!-- - [Ray Tracing the next Weekend]() -->
 <!-- - [Ray Tracing for Lifetime]() -->
-<!-- - [Computer Graphics from Scratch]() -->
 <!-- - Some shader stuff (Advanced graphics programming) -->
 <!---->
 <!---->
