push using build script

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ what I have been doing, or I might want to share it with someone just starting.<
 <a href="https://gerrit.libreoffice.org/q/owner:sahil%2540libreoffice.org" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Gerrit_icon.svg/1024px-Gerrit_icon.svg.png" /> </a>
 <a href="mailto:me.sahilgautam@gmail.com" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" /> </a>
 <br></p>
-<h2 id="libreoffice">Libreoffice</h2>
+<h2 id="libreoffice-hacking">Libreoffice Hacking</h2>
 <ul>
 <li><a href="/post/libreoffice-user-hostile-dialog-box">User Hostile Dialog Box - Practice</a></li>
 </ul>
@@ -168,6 +168,51 @@ what I have been doing, or I might want to share it with someone just starting.<
 <!---->
 <!-- - I will rewrite my neovim configuration, once I am done with lua tutorials -->
 <!-- - I want to create a site for this canteen waiting problem as well. -->
+<!-- ## Helper Tools -->
+<!---->
+<!-- - Git -->
+<!-- - Makefile -->
+<!-- - Linux -->
+<!-- <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_Logo_Flat.svg/2560px-LibreOffice_Logo_Flat.svg.png"> -->
+<!-- <img width="300px" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/GSoC-logo-horizontal.svg" style="margin-left: 40px; margin-bottom: 9px"> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <img align="left" alt="Java" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"/> -->
+<!---->
+<h2 id="some-notes">Some Notes</h2>
+<br>
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" /> </a> -->
+<!-- <a> <img alt="aws" align="left" width="50px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" /> </a> -->
+<!-- <img align="left" alt="Linux" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" /> -->
+<!-- <img align="left" alt="C++" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-line.svg" /> -->
+<!-- <img align="left" alt="GitHub" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" /> -->
+<!-- <img align="left" alt="Bash" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" /> -->
+<!-- <img align="left" alt="Ansible" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ansible/ansible-original.svg" /> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <img width="40px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-original.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/emacs/emacs-original.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vim/vim-original.svg" /> -->
+<!-- <img align="left" alt="Git" width="50px" style="padding-right:10px;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/googlecloud/googlecloud-original.svg" /> -->
+<!-- <img width="40px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/go/go-original.svg" /> -->
+<!-- <img width="40px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/lua/lua-original.svg" /> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <img align="left" alt="Git" width="140px" style="padding-right:10px;" src="https://storage.googleapis.com/support-kms-prod/49oNum5LgbMjgCqRkirdgh4ujnwLFKUx82nP" /> -->
+<!-- <img align="left" alt="Git" width="140px" style="padding-right:10px;" src="https://storage.googleapis.com/support-kms-prod/49oNum5LgbMjgCqRkirdgh4ujnwLFKUx82nP" /> -->
+<!-- <img align="left" alt="Git" width="140px" style="padding-right:10px;" src="https://storage.googleapis.com/support-kms-prod/49oNum5LgbMjgCqRkirdgh4ujnwLFKUx82nP" /> -->
+<!-- <img align="left" alt="Git" width="140px" style="padding-right:10px;" src="https://images.credly.com/images/8b8ed108-e77d-4396-ac59-2504583b9d54/twitter_thumb_201604_cka_from_cncfsite__281_29.png" /> -->
+<!---->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
     
 </div>
