push using build script

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ what I have been doing, or I might want to share it with someone just starting.<
 <a href="https://github.com/mesahilgautam" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://static-00.iconduck.com/assets.00/github-icon-2048x2048-dpporae2.png" /> </a>
 <a href="https://gerrit.libreoffice.org/q/owner:sahil%2540libreoffice.org" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Gerrit_icon.svg/1024px-Gerrit_icon.svg.png" /> </a>
 <a href="mailto:me.sahilgautam@gmail.com" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" /> </a>
-<br></p>
+<a href="/index.xml" ><img align="left" alt="Git" width="30px" style="padding-right:10px;" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/43/Feed-icon.svg/2048px-Feed-icon.svg.png" /> </a></p>
+<br>
 <h2 id="libreoffice-hacking">Libreoffice Hacking</h2>
 <ul>
 <li><a href="/post/libreoffice-user-hostile-dialog-box">User Hostile Dialog Box - Practice</a></li>
@@ -123,10 +124,9 @@ what I have been doing, or I might want to share it with someone just starting.<
 <!-- - [Different Units of Measurement in Libreoffice](/post/libreoffice-different-units) -->
 <!-- - [Lua UNO Language Binding in Libreoffice](/post/libreoffice-lua-uno-languagebinding) -->
 <!-- - [Custom Themes in Libreoffice (GSoC)](/post/libreoffice-custom-themes) -->
-<h2 id="graphics-programming">Graphics Programming</h2>
-<ul>
-<li><a href="/post/computer-graphics-from-scratch">Computer Graphics from Scratch</a></li>
-</ul>
+<!-- ## Graphics Programming -->
+<!---->
+<!-- - [Computer Graphics from Scratch](/post/computer-graphics-from-scratch) -->
 <!-- - [Lua](./files/lua/readme.md)  -->
 <!-- - [Libreoffice Welcome Screen]()  -->
 <!-- - [Colorscheme in Libreoffice]() -->
